src/components/ArtList/artList.css
/* .art-list {
    margin-top: 20px;
}

.art-image {
    background-color: white;
    display: inline;
    max-width: 100%;
    height: 22vh;
    width: fit-content;
    margin-right: 10px;
    margin-bottom: 10px;
    cursor: url("./../../assets/icons8-hand-cursor.png"),auto;
    line-height: 0;
}
 */
.art-list {
    margin-top: 20px;
    line-height: 2;
    -webkit-column-count: 3;
    -webkit-column-gap: 10px;
    -moz-column-count: 3;
    -moz-column-gap: 10px;
    column-count: 3;
    column-gap: 10px;
    width: 100%;
    /* min-height: 75vh; */
   
}


.art-image {
    cursor: pointer;
    position: relative;
    width: 100% !important;
    height: auto !important;
    user-select: none;
}

.floating-caption {
    line-height: 1.2;
    position: absolute;
    user-select: none;
    background-color: rgba(73, 85, 82, 0.8);
    border: 1px solid white;
    max-width: 40vw;
    padding: 5px 8px;
    margin-right: 20px;
    z-index: 10;
    left: 0;
    top: 0;
}

.loading-icon {
    width: 60px;
}

.center {
    position: absolute;
    top: calc(50% + 10vh);
    left: 50%;
    transform: translate(-50%,-50%);
}

.bold {
    font-weight: bold;
}
.page-navigator {
    position: relative;
    bottom: 0;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    padding: 20px 0 0 0;
    user-select: none;
}

.page-navigator:last-child{
    padding-bottom: 20px;
}
.current-page {
    border: 1px solid white;
    padding: 5px 9px;
    margin-right: 5px;
    user-select: none;
}

.page-arrow {
    width: 3vw;
    padding: 5px;
    cursor: pointer;
}

.page-arrow:hover {
    background-color: rgba(255, 255, 255, 0.1);
}

.disabled:hover {
    background-color: transparent;
}

.disabled {
    cursor: default;
}

@media only screen and (max-width: 700px) {
    .art-list {
        position: relative;
        left: -3vw;
        width: calc(100% + 6vw + 2px);
        -webkit-column-count: 1;
        -moz-column-count: 1;
        column-count: 1;
        transform: translateX(-1px);
        /* min-height: 65vh; */
    }

    .page-arrow {
        width: 10vw;
    }

    .art-object{
        border: 1px solid white;
        border-top: 0;        
        margin-bottom: 15px;
    }

    .floating-caption {
        position: static;
        line-height: 1.2;
        border: none;
        padding: 0 10px 10px 10px;
        margin: 0;
        max-width: 100%;
    }

    .floating-caption.hide {
        display: inline-block;
    }

    .art-image {
        width: calc(100% + 1px);
    }
}


@media only screen and (min-width: 701px) and (max-width: 1024px){
    .art-object{
        border: 1px solid white;  
        margin-bottom: 15px;
    }
    .art-list {
        -webkit-column-count: 2;
        -moz-column-count: 2;
        column-count: 2;
    }
    .floating-caption {
        position: static;
        line-height: 1.2;
        border: none;
        padding: 0 10px 10px 10px;
        margin: 0;
        max-width: 100%;
    }

    .floating-caption.hide {
        display: block;
    }

    .page-arrow {
        width: 5vw;
    }
}

